Source/WebCore/platform/graphics/cairo/BitmapImageCairo.cpp
@@ -28,6 +28,7 @@
 #include "config.h"
 #include "BitmapImage.h"
 
+#include "CairoUtilities.h"
 #include "ImageObserver.h"
 #include "PlatformContextCairo.h"
 #include <cairo.h>
@@ -36,6 +37,7 @@ namespace WebCore {
 
 BitmapImage::BitmapImage(PassRefPtr<cairo_surface_t> nativeImage, ImageObserver* observer)
     : Image(observer)
+    , m_size(cairoSurfaceSize(nativeImage.get()))
     , m_currentFrame(0)
     , m_frames(0)
     , m_frameTimer(0)
@@ -52,10 +54,7 @@ BitmapImage::BitmapImage(PassRefPtr<cairo_surface_t> nativeImage, ImageObserver*
     , m_sizeAvailable(true)
     , m_haveFrameCount(true)
 {
-    int width = cairo_image_surface_get_width(nativeImage.get());
-    int height = cairo_image_surface_get_height(nativeImage.get());
-    m_decodedSize = width * height * 4;
-    m_size = IntSize(width, height);
+    m_decodedSize = m_size.width() * m_size.height() * 4;
 
     m_frames.grow(1);
     m_frames[0].m_hasAlpha = cairo_surface_get_content(nativeImage.get()) != CAIRO_CONTENT_COLOR;
@@ -95,7 +94,7 @@ void BitmapImage::draw(GraphicsContext* context, const FloatRect& dst, const Flo
         context->setCompositeOperation(op, blendMode);
 
 #if ENABLE(IMAGE_DECODER_DOWN_SAMPLING)
-    IntSize scaledSize(cairo_image_surface_get_width(surface.get()), cairo_image_surface_get_height(surface.get()));
+    IntSize scaledSize = cairoSurfaceSize(surface.get());
     FloatRect adjustedSrcRect = adjustSourceRectForDownSampling(src, scaledSize);
 #else
     FloatRect adjustedSrcRect(src);
@@ -139,12 +138,12 @@ void BitmapImage::checkForSolidColor()
     if (!surface) // If it's too early we won't have an image yet.
         return;
 
-    ASSERT(cairo_surface_get_type(surface.get()) == CAIRO_SURFACE_TYPE_IMAGE);
+    if (cairo_surface_get_type(surface.get()) != CAIRO_SURFACE_TYPE_IMAGE)
+        return;
 
-    int width = cairo_image_surface_get_width(surface.get());
-    int height = cairo_image_surface_get_height(surface.get());
+    IntSize size = cairoSurfaceSize(surface.get());
 
-    if (width != 1 || height != 1)
+    if (size.width() != 1 || size.height() != 1)
         return;
 
     unsigned* pixelColor = reinterpret_cast_ptr<unsigned*>(cairo_image_surface_get_data(surface.get()));
